--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Home
 author:
-  name: Livia Viana
+  name: Lívia Viana
   email: liviavianap@gmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
@@ -42,7 +42,7 @@ minima:
   # solarized-light	   Light variant of solarized color scheme.
   # solarized-dark	   Dark variant of solarized color scheme.
   # solarized	         Adaptive skin for solarized color scheme skins.
-  skin: classic
+  skin: dark
 
   # Minima date format.
   # The default value is "%b %d, %Y" (e.g. Nov 14, 2023)
